--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Ppx to help target multiple architecture",
   "scripts": {
     "test": "eval $(dependencyEnv) && GL_BACKEND=native ocamlfind ocamlopt -dsource -pp refmt -ppx ./ppx_matchenv.exe -impl test.re",
-    "postinstall": "eval $(dependencyEnv) && nopam && ocamlfind ocamlopt -package compiler-libs.common -pp refmt -linkpkg -impl src/index.re -o ppx_matchenv.exe",
     "build": "npm run postinstall",
     "top": "eval $(dependencyEnv) && rtop",
     "env": "eval $(dependencyEnv) && env",
@@ -14,10 +13,17 @@
     "reml": "pbpaste | ./node_modules/reason/refmt_impl.native -parse re -print ml -use-stdin true -is-interface-pp false"
   },
   "dependencies": {
-    "@opam-alpha/merlin": "^ 2.5.0",
-    "dependency-env": "https://github.com/npm-ml/dependency-env.git",
-    "nopam": "https://github.com/yunxing/nopam.git",
-    "reason": "https://github.com/facebook/reason.git"
+    "reason": "facebook/reason#esy"
+  },
+  "devDependencies": {
+    "ocaml": "esy-ocaml/ocaml#esy",
+    "@opam-alpha/utop": "*"
+  },
+  "esy": {
+    "build": [
+      "ocamlfind ocamlopt -package compiler-libs.common -pp 'refmt --print binary' -linkpkg -impl src/index.re -o $cur__bin/ppx_matchenv.exe"
+    ],
+    "buildsInSource": true
   },
   "repository": {
     "type": "git",
