--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@opam-alpha/merlin": "^ 2.5.0",
-    "dependency-env": "https://github.com/npm-ml/dependency-env.git",
-    "nopam": "https://github.com/yunxing/nopam.git",
-    "reason": "https://github.com/facebook/reason.git"
+    "dependency-env": "npm-ml/dependency-env",
+    "nopam": "yunxing/nopam",
+    "reason": "facebook/reason"
   },
   "repository": {
     "type": "git",
