--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ppx to help target multiple architecture",
   "scripts": {
     "test": "eval $(dependencyEnv) && GL_BACKEND=native ocamlfind ocamlopt -dsource -pp \"refmt --print binary\" -ppx ./ppx_matchenv.exe -impl test.re",
-    "postinstall": "eval $(dependencyEnv) && nopam && ocamlfind ocamlopt -package compiler-libs.common -pp refmt -linkpkg -impl src/index.re -o ppx_matchenv.exe",
+    "postinstall": "eval $(dependencyEnv) && nopam && ocamlfind ocamlopt -package compiler-libs.common -pp \"refmt --print binary\" -linkpkg -impl src/index.re -o ppx_matchenv.exe",
     "build": "npm run postinstall",
     "top": "eval $(dependencyEnv) && rtop",
     "env": "eval $(dependencyEnv) && env",
