Update refmt and depend on bsansouci/bsb-native master

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "matchenv": "matchenv"
   },
   "dependencies": {
-    "bs-platform": "bsansouci/bsb-native#teset"
+    "bs-platform": "bsansouci/bsb-native"
   },
   "repository": {
     "type": "git",
