--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "postinstall": "bsb && cp lib/bs/native/index.native matchenv"
   },
-  "devDependencies": {
+  "dependencies": {
     "bs-platform": "bsansouci/bsb-native"
   },
   "repository": {
