--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "bsb && cp lib/bs/native/index.native matchenv"
   },
   "dependencies": {
-    "bs-platform": "bsansouci/bsb-native"
+    "bs-platform": "bsansouci/bsb-native#2.1.1"
   },
   "repository": {
     "type": "git",
