--- a/bsconfig.json
+++ b/bsconfig.json
@@ -3,8 +3,13 @@
   "sources": "src",
   "ocaml-dependencies": ["compiler-libs"],
   "entries": [{
+    "backend": "bytecode",
+    "main-module": "Index",
+    "output-name": "matchenv",
+  },{
     "backend": "native",
     "main-module": "Index",
+    "output-name": "matchenv",
   }],
   "namespace": true,
   "refmt": 3,
